# vllm_seehwan

./: .env.example  .env.sample  .gitignore  ARCHITECTURE.md  COMPLETION_SUMMARY.md  DEPLOYMENT_LOG.md  DEVELOPER_ONBOARDING.md  GETTING_STARTED.md  MODEL_MANAGEMENT.md  OPERATIONS.md  README.md  SECURITY_GUIDE.md  SYSTEM_STATUS.md  TESTING_GUIDE.md  cleanup  cleanup.sh  docker-compose.dev.yml  docker-compose.yml  docker-env.sh  help  logs  logs.sh  model_profiles.yml  restart  start  start-all.sh  start-frontend.sh  status  stop  stop.sh
frontend/: .eslintrc.json  Dockerfile  Dockerfile.dev  FRONTEND_GUIDE.md  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatArea.tsx  LoginModal.tsx  Message.tsx  MessageInput.tsx  ModelSelector.tsx  ModelSelector_test.tsx  OAuthCallback.tsx  SimpleLogin.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useModel.ts
frontend/src/types/: chat.ts  model.ts
gateway/: Dockerfile  GATEWAY_GUIDE.md  README.md  pyproject.toml  requirements.txt
gateway/app/: config.py  database.py  main.py  middleware.py
gateway/app/routers/: auth.py  chat.py  conversations.py  health.py  models.py
gateway/app/schemas/: model.py
gateway/app/services/: model_manager.py
k6/: K6_GUIDE.md  comprehensive-test.js  load-test.js  model-management-test.js  streaming-test.js
nginx/: NGINX_GUIDE.md  README.md  nginx.conf
scripts/: README.md  benchmark.sh  init.sql  restart.sh  setup.sh  start.sh  status.sh
